--- a/header.tex
+++ b/header.tex
@@ -71,3 +71,4 @@
 \newcommand{\ksf}{\mbox{$k$-SF}}
 \newcommand{\kblpp}{\mbox{$k$-BLPP}}
 \newcommand{\blpp}{\mbox{BLPP}}
+\newcommand{\etal}{\em et al.}
